# My_Chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/agents/: __init__.py  agent.py
app/api/: chat_api.py
app/database/: __init__.py  connection.py
app/pipeline/: __init__.py  chat_pipeline.py
app/schema/: __init__.py  chat_schemas.py
app/services/answer_query/: __init__.py  answer_query.py
app/services/documents/: __init__.py  add_documents.py
app/services/vectorstore/: __init__.py  qdrant_upload_document.py  qdrant_vector_store.py
app/tools/: __init__.py  tools.py
app/utils/: __init__.py  config.py  utils.py
